--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,23 @@
-#JDBC Configutation for Database Connection
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://db01:3306/accounts?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=admin
-jdbc.password=admin123
+logging.level.org.springframework=INFO
+logging.level.com.mkyong=INFO
+logging.level.com.zaxxer=INFO
+logging.level.root=ERROR
+logging.pattern.console=%-5level %logger{36} - %msg%n
 
-#Memcached Configuration For Active and StandBy Host
-#For Active Host
-memcached.active.host=mc01
-memcached.active.port=11211
-#For StandBy Host
-memcached.standBy.host=127.0.0.2
-memcached.standBy.port=11211
+## Testing only
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
 
-#RabbitMq Configuration
-rabbitmq.address=rmq01
-rabbitmq.port=5672
-rabbitmq.username=test
-rabbitmq.password=test
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.username=mkyong
+spring.datasource.password=password
 
-#Elasticesearch Configuration
-elasticsearch.host =192.168.1.85
-elasticsearch.port =9300
-elasticsearch.cluster=mirana
-elasticsearch.node=mirananode
+# create and drop table, good for testing, production set to none or comment it
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# app custom property, if true, insert data for testing
+app.db.init.enabled=true
+
+# enable query logging
+# spring.jpa.show-sql=true
