--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,4 @@
-logging.level.org.springframework=INFO
-logging.level.com.mkyong=INFO
-logging.level.com.zaxxer=INFO
-logging.level.root=ERROR
-logging.pattern.console=%-5level %logger{36} - %msg%n
-
-## Testing only
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
-
-## PostgreSQL
-spring.datasource.url=jdbc:postgresql://postgres:5432/mydb
-spring.datasource.username=mkyong
-spring.datasource.password=password
-
-# create and drop table, good for testing, production set to none or comment it
-spring.jpa.hibernate.ddl-auto=create-drop
-
-# app custom property, if true, insert data for testing
-app.db.init.enabled=true
-
-# enable query logging
-# spring.jpa.show-sql=true
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/accounts?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=newuser
+jdbc.password=password
